# aocrust2023

./: Cargo.toml  README.md
src/day1/: main.rs
src/day2/: main.rs
src/day3/: main.rs
src/day4/: main.rs
