[package]
name = "aocrust2023"
version = "0.1.0"
edition = "2021"
default-run = "day4"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day1"
path = "src/day1/main.rs"

[[bin]]
name = "day2"
path = "src/day2/main.rs"

[[bin]]
name = "day3"
path = "src/day3/main.rs"

[[bin]]
name = "day4"
path = "src/day4/main.rs"

[dependencies]
nom = { version = "7.1.3", features = ["docsrs"]}
anyhow = "1.0.75"

[dev-dependencies]
nom-test-helpers = "6.1.3"